deployments/kubernetes-dashboard-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-lb
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard-lb
    app.kubernetes.io/part-of: kubernetes-dashboard
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.86.205
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kong
