deployments/openwebui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: openwebui.spark
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: openwebui
            port:
              number: 80
